2015-11-01
	Fix debugger launch in linux build
	Fix editor variable handling
	Fix image drawing

2015-10-20
	Fix LET when assigning a value to a MAP/ARRAY field

2015-09-15
	SDL Update PEN(3) to work more like FLTK
	Fix display output before PEN
	Fix BOLD and ITALIC font display
	Context menu edit keyword completion
	Updated program icon
	Editor line number widget can be used for scrolling
	Updated editor help display
	Fix TSAVE with try/catch

2015-08-26
	Editor fixes:
	- now displays an i-beam/edit cursor
	- highlighting for numbers and keywords
	- F1 key for keywords surrounded by punctuation
	- page scrolling with up/down arrow keys
	- pressing tab at the bottom no longer jumps to the top
	- display additional editor context menu items
	Added a basic debugger

2015-08-02
	Fix display output before DELAY
	Fix LET command problem found in 32bit linux
	Removed obsolete/unimplemented keywords WSPLIT, PLOT2, UNLOADLIB

2015-07-18
	Added IDE editor sdl/android
	Made a few minor performance improvements (SDL)

2015-06-07
	Fixed PRINT 1/1000 and other floating point rounding issues
	Fixed problem with 59 char INPUT prompt
	Added missing PEN(12) support
	Added multi-item case selection (suggestion by James Grimaldi)
	SDL: Updated display of file anchor links
	SDL: Fix drag-drop from explorer to launch programs

2015-01-25
	Added timer func support
	Improved syntax error messages
	Remove dependence on malloc_usable_size
	Pass TRUE as an argument to PAUSE to wait for an event

2015-01-18
	Anti-aliased line drawing
	Improved INPUT with clipboard handling
	Improved graphics display performance

2014-12-03
	File-open now uses .bas DIR to locate files

2014-11-06
	Added WINDOW system object to control the ansiwidget
	Added sound support to SDL port

2014-10-28
	Update INKEY to return ALT, CTRL, ALT+CTRL key information

2014-10-20
	Refactor FORM handling to use system object

2014-09-28
	Refactor image handling to use system object

2014-09-22