@@ -14,5 +14,6 @@
 void loadIcon(SDL_Window *window);
 int getStartupFontSize(SDL_Window *window);
 void launchDebug(const char *file);
+void browseFile(const char *url);
 
 #endif
