@@ -2,6 +2,10 @@
 	Fix debugger launch in linux build
 	Fix editor variable handling
 	Fix image drawing
+	Fix PAINT infinite loop
+	Fix keyboard handling for non-us keymaps
+	Fix Ctrl+Home editor keystroke handler
+	Fix crash with online command if site is down
 
 2015-10-20
 	Fix LET when assigning a value to a MAP/ARRAY field
